syntax = "proto3";

package comment;

option go_package = "pkg/pb";

service CommentService {
  rpc GetCommentsByPostId(GetCommentsByPostIdRequest) returns (GetCommentsByPostIdResponse) {}
  rpc GetCommentById(GetCommentByIdRequest) returns (GetCommentByIdResponse) {}
  rpc AddComment(AddCommentRequest) returns (AddCommentResponse) {}
  rpc DeleteComment(DeleteCommentRequest) returns (DeleteCommentResponse) {}
}

// GetCommentsByPostId

message CommentBody {
  repeated string body = 1;
}

message GetCommentsByPostIdRequest {
  int64 postId = 1;
}

message GetCommentsByPostIdResponse {
  int64 status = 1;
  string error = 2;
  map<string, CommentBody> comments = 3;
}

// GetCommentById

message GetCommentByIdRequest {
  int64 commentId = 1;
  int64 postId = 2;
}

message GetCommentByIdResponse {
  int64 status = 1;
  string error = 2;
  string username = 3;
  string body = 4;
}

// AddComment

message AddCommentRequest {
  int64 userId = 1;
  int64 postId = 2;
  string body = 3;
}

message AddCommentResponse {
  int64 status = 1;
  string error = 2;
  string username = 3;
  string body = 4;
}

// DeleteComment

message DeleteCommentRequest {
  int64 commentId = 1;
  int64 postId = 2;
}

message DeleteCommentResponse {
  int64 status = 1;
  string error = 2;
}
